Small edits to fix.

--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lawrennd/fitkit/blob/main/examples/atlas_fitness_comparison.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -175,7 +175,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "tgIq_EgL1T7k"
+      },
       "outputs": [],
       "source": [
         "# Display loaded data structure (with product names!)\n",
@@ -440,7 +442,16 @@
       },
       "outputs": [],
       "source": [
-        "# Create interactive scatter plot with Plotly (hover shows full country names)\n",
+        "# Reconstruct comparison DataFrame to ensure data consistency (fixes skipped cells/corruption)\n",
+        "comparison = countries_2000[['country', 'idx', 'fitness', 'rank_2000']].merge(\n",
+        "    countries_2020[['country', 'idx', 'fitness', 'rank_2020']],\n",
+        "    on='country',\n",
+        "    how='inner',\n",
+        "    suffixes=('_2000', '_2020')\n",
+        ")\n",
+        "comparison['fitness_change'] = comparison['fitness_2020'] - comparison['fitness_2000']\n",
+        "comparison['country_name'] = comparison['country'].map(country_names).fillna(comparison['country'])\n",
+        "\n",
         "# Compute correlation\n",
         "r_pearson, p_pearson = pearsonr(comparison['fitness_2000'], comparison['fitness_2020'])\n",
         "r_spearman, p_spearman = spearmanr(comparison['fitness_2000'], comparison['fitness_2020'])\n",
@@ -453,7 +464,7 @@
         "    color='fitness_change',\n",
         "    color_continuous_scale='RdYlGn',\n",
         "    hover_data={'fitness_2000': ':.3f', 'fitness_2020': ':.3f', 'fitness_change': ':.3f', 'country_name': False},\n",
-        "    custom_data=[comparison['country']],\n",
+        "    custom_data=[comparison.index],\n",
         "    labels={\n",
         "        'fitness_2000': 'Economic Fitness 2000',\n",
         "        'fitness_2020': 'Economic Fitness 2020',\n",
@@ -619,10 +630,15 @@
         "div_2000 = M_2000.sum(axis=1).A1\n",
         "div_2020 = M_2020.sum(axis=1).A1\n",
         "\n",
-        "comparison['diversification_2000'] = div_2000[comparison['idx_2000']]\n",
-        "comparison['diversification_2020'] = div_2020[comparison['idx_2020']]\n",
+        "# Drop NaNs to ensure valid correlations and avoid errors\n",
+        "# Adding .copy() ensures we have a standalone DataFrame, preventing SettingWithCopyWarning\n",
+        "comparison = comparison.dropna(subset=['fitness_2000', 'fitness_2020']).copy()\n",
+        "\n",
+        "# Use .values to ensure numpy-style indexing\n",
+        "comparison['diversification_2000'] = div_2000[comparison['idx_2000'].values]\n",
+        "comparison['diversification_2020'] = div_2020[comparison['idx_2020'].values]\n",
         "comparison['div_change'] = comparison['diversification_2020'] - comparison['diversification_2000']\n",
-        "# country_name already added in Section 4, no need to add again\n",
+        "# country_name already added in Section 4/5, no need to add again\n",
         "\n",
         "# Compute correlations\n",
         "r_2000, p_2000 = spearmanr(comparison['fitness_2000'], comparison['diversification_2000'])\n",
@@ -765,7 +781,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "QvsjZANd1T7n"
+      },
       "source": [
         "## 10. Fitness vs Economic Indicators\n",
         "\n",
@@ -777,7 +795,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Klm7gY-q1T7n"
+      },
       "outputs": [],
       "source": [
         "# Load GDP per capita and Human Capital Index data\n",
@@ -815,7 +835,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "m4j1EW7y1T7n"
+      },
       "outputs": [],
       "source": [
         "# Remove any zero or negative values for log scale\n",
@@ -938,7 +960,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "giMAqSMI1T7n"
+      },
       "outputs": [],
       "source": [
         "# Identify interesting countries (outliers and extremes)\n",
@@ -998,7 +1022,7 @@
         "- Tacchella, A., Cristelli, M., Caldarelli, G., Gabrielli, A., & Pietronero, L. (2012). A new metrics for countries' fitness and products' complexity. *Scientific reports*, 2(1), 723.\n",
         "- Hausmann, R., et al. (2014). *The Atlas of Economic Complexity*. MIT Press.\n",
         "- Lawrence, N.D. (2024). \"Conditional Likelihood Interpretation of Economic Fitness\" (working paper).\n",
-        "- Data sources: \n",
+        "- Data sources:\n",
         "  - Harvard Growth Lab's Atlas of Economic Complexity (https://atlas.hks.harvard.edu/)\n",
         "  - World Bank World Development Indicators (GDP per capita, Human Capital Index)"
       ]
@@ -1006,8 +1030,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
