--- a/examples/atlas_fitness_comparison.ipynb
+++ b/examples/atlas_fitness_comparison.ipynb
@@ -18,6 +18,10 @@
       "source": [
         "# Economic Fitness Analysis: Comparing 2000 vs 2020\n",
         "\n",
+        "## Neil Lawrence\n",
+        "\n",
+        "## 2026-02-11\n",
+        "\n",
         "This notebook demonstrates the Fitness-Complexity algorithm using real-world trade data from the Harvard Atlas of Economic Complexity. We compare economic fitness and product complexity between 2000 and 2020 to understand how countries and products evolved over this 20-year period.\n",
         "\n",
         "## What is Economic Fitness?\n",
